// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bin menu renders correctly after clicking on bin button 1`] = `
<div>
  <div
    class="mantine-Group-root mantine-qokdfp"
  >
    <button
      aria-controls="mantine-hg8zm9qiy-dropdown"
      aria-expanded="true"
      aria-haspopup="menu"
      class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-y99nq2"
      data-expanded="true"
      id="mantine-hg8zm9qiy-target"
      type="button"
    >
      <svg
        class="tabler-icon tabler-icon-trash-filled"
        fill="none"
        height="2rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1px"
        viewBox="0 0 24 24"
        width="2rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6a1 1 0 0 1 .117 1.993l-.117 .007h-.081l-.919 11a3 3 0 0 1 -2.824 2.995l-.176 .005h-8c-1.598 0 -2.904 -1.249 -2.992 -2.75l-.005 -.167l-.923 -11.083h-.08a1 1 0 0 1 -.117 -1.993l.117 -.007h16z"
          fill="currentColor"
          stroke-width="0"
        />
        <path
          d="M14 2a2 2 0 0 1 2 2a1 1 0 0 1 -1.993 .117l-.007 -.117h-4l-.007 .117a1 1 0 0 1 -1.993 -.117a2 2 0 0 1 1.85 -1.995l.15 -.005h4z"
          fill="currentColor"
          stroke-width="0"
        />
      </svg>
    </button>
    <div
      aria-labelledby="mantine-hg8zm9qiy-target"
      aria-orientation="vertical"
      class="mantine-Menu-dropdown mantine-1nbod7e"
      data-position="left"
      id="mantine-hg8zm9qiy-dropdown"
      role="menu"
      style="transition-property: opacity; transition-duration: 150ms; transition-timing-function: ease; opacity: 1; z-index: 300; top: 0px; left: -3.5px; width: 12.5rem;"
      tabindex="-1"
    >
      <div
        data-autofocus="true"
        data-menu-dropdown="true"
        style="outline: 0;"
        tabindex="-1"
      >
        <button
          class="mantine-Menu-item mantine-eby8v3"
          data-menu-item="true"
          role="menuitem"
          tabindex="-1"
          type="button"
        >
          <div
            class="mantine-1rnkhfs mantine-Menu-itemLabel"
          >
            Retrieve all
          </div>
        </button>
        <button
          class="mantine-Menu-item mantine-eby8v3"
          data-menu-item="true"
          role="menuitem"
          tabindex="-1"
          type="button"
        >
          <div
            class="mantine-1rnkhfs mantine-Menu-itemLabel"
          >
            Empty Bin
          </div>
        </button>
      </div>
      <div
        class="mantine-ndinzw mantine-Menu-arrow"
        style="width: 0.4375rem; height: 0.4375rem; transform: rotate(45deg); position: absolute; border-top-right-radius: 0rem; right: -0.21875rem; border-left-color: transparent; border-bottom-color: transparent; top: -0.21875px;"
      />
    </div>
  </div>
</div>
`;

exports[`Bin renders correctly 1`] = `
<div>
  <div
    class="mantine-Group-root mantine-qokdfp"
  >
    <button
      aria-controls="mantine-n930dvqtn-dropdown"
      aria-expanded="false"
      aria-haspopup="menu"
      class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-y99nq2"
      id="mantine-n930dvqtn-target"
      type="button"
    >
      <svg
        class="tabler-icon tabler-icon-trash-filled"
        fill="none"
        height="2rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1px"
        viewBox="0 0 24 24"
        width="2rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6a1 1 0 0 1 .117 1.993l-.117 .007h-.081l-.919 11a3 3 0 0 1 -2.824 2.995l-.176 .005h-8c-1.598 0 -2.904 -1.249 -2.992 -2.75l-.005 -.167l-.923 -11.083h-.08a1 1 0 0 1 -.117 -1.993l.117 -.007h16z"
          fill="currentColor"
          stroke-width="0"
        />
        <path
          d="M14 2a2 2 0 0 1 2 2a1 1 0 0 1 -1.993 .117l-.007 -.117h-4l-.007 .117a1 1 0 0 1 -1.993 -.117a2 2 0 0 1 1.85 -1.995l.15 -.005h4z"
          fill="currentColor"
          stroke-width="0"
        />
      </svg>
    </button>
  </div>
</div>
`;
